 /* $Id: changelog,v 1.693 2000-02-03 23:06:34 sandervl Exp $ */

 2000-02-03: Jens Wiessner <wiessnej@rfi.de>
	- NTDLL: Ported Wine security apis
	- CRTDLL: Update

 2000-02-03: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: merged controls with WINE 20000130

 2000-02-03: Daniela Engert <dani@ngrt.de>
	- GDI32: Implement RGB 555 to RGB 565 conversion in assembler

 2000-02-03: Sander van Leeuwen <sandervl@xs4all.nl>
	- WININET: Ported Wininet code from Corel Wine tree
	- INCLUDE\WINSOCK: MS Winsock compatible header
	- GDI32: Prelimary RGB 555 to RGB 565 conversion in SetDIBitsToDevice
                 (will be rewritten in assembly for better performance)
                 (for RealPlayer videos in 16 bits mode)
	         BitBlt fix (return after dibsection blit -> fixes Quake 2)
                 Added MMX RGB conversion.
	- USER32: Added export for OS2ToWin32Handle
	- COMDLG32: Merged with latest Wine version (20000109)
	- INCLUDE\WIN: Fixes to compile comdlg32 in C mode
		 (will be rewritten in assembly for better performance)
		 (for RealPlayer videos in 16 bits mode)
		 BitBlt fix (return after dibsection blit -> fixes Quake 2)

 2000-02-01: Jeroen van den Horn <J.vandenHorn@fibre.a2000.nl>
	- OPENGL: Ported SGI GLUT sources + Opengl update

 2000-02-01: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: Cleaned up
		 Fixes for dib section apis. RealPlayer 7 can play videos
		 now (correct in 24 bps mode; upside down and wrong colors
		 in 16 bps mode)

 2000-02-01: Knut Stange Osmundse <knut.stange.osmundsen>
	- Pe2Lx: Makefile should be working again.
	- KERNEL32: RegisterPe2LxDll - no detach is done for Pe2Lx/Win32k DLLs.
		    This is a temporary fix.

 2000-02-01: Patrick Haller <phaller@gmx.net>
	- SHELL32: Added PathSkipRootAW

 2000-02-01: Jens Wiessner <wiessnej@rfi.de>
	- NTDLL: Updated .def file (similar to NT 4 SP6) + bugfix for impdef

 2000-01-31: Sander van Leeuwen <sandervl@xs4all.nl>